<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataBased">

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_orange"
        android:text="@string/backToActivity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/list_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/list_view"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:id="@+id/scrollView2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/linear"
            android:orientation="vertical">]
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints="product"
                android:background="@color/black_orange"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/calories"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back">

            </EditText>

            <EditText
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints="product"
                android:background="@color/black_orange"
                android:hint="@string/calories"
                android:inputType="text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/proteins"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintVertical_bias="0.22">

            </EditText>

            <EditText
                android:id="@+id/proteins"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints="product"
                android:background="@color/black_orange"
                android:hint="@string/proteins"
                android:inputType="text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/carbohydrates"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calories"
                app:layout_constraintVertical_bias="0.33">

            </EditText>

            <EditText
                android:id="@+id/carbohydrates"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints="product"
                android:background="@color/black_orange"
                android:hint="@string/carbohydrates"
                android:inputType="text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/fats"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/proteins"
                app:layout_constraintVertical_bias="0.44">

            </EditText>

            <EditText
                android:id="@+id/fats"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints="product"
                android:background="@color/black_orange"
                android:hint="@string/fats"
                android:inputType="text"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@id/list_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/carbohydrates"
                app:layout_constraintVertical_bias="0.55">

            </EditText>
        </LinearLayout>



    </ScrollView>


    <ListView
        app:layout_constraintTop_toBottomOf="@id/scrollView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/getData"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:id="@+id/list_view"
        android:orientation="vertical">
    </ListView>

    <Button
        android:id="@+id/getData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_orange"
        android:text="@string/getfromDB"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_view"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_orange"
        android:text="@string/addToDB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getData"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/del"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_orange"
        android:text="@string/deleteFromDB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getData"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>