<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DayRatio">
    <Button
        android:id="@+id/ret"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_orange"
        android:text="@string/backToActivity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/userList"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/foodList"
        app:layout_constraintTop_toBottomOf="@+id/ret"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/weight_it"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        />

    <EditText
        android:id="@+id/weight_it"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foodList"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:background="@color/black_orange"
        android:hint="@string/enter"
        android:textSize="13sp"
        android:autofillHints="product"
        android:inputType="text">

    </EditText>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/getFoodData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_it"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/black_orange"
        android:text="@string/new_process"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/getFoodData"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/foodData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/black_orange"
        android:text="@string/dataAboutProducts"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/foodData"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getFoodData"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/black_orange"
        android:text="@string/dataAboutProducts"
        android:textSize="25sp"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>