<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".MainActivity">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/new_el_from_data"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:id="@+id/scroll"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/linear"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/new_el_from_data"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@id/btn_new"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:background="@color/black_orange"
        android:hint="@string/enter"
        android:textSize="25sp"
        android:autofillHints="product"
        android:inputType="text">

    </EditText>

    <Button
        android:id="@+id/btn_new"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/btn_new_act_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_el_from_data"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/black_orange"
        android:text="@string/new_process"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_new_act_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_new"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/black_orange"
        android:text="@string/dataAboutProducts"
        android:textSize="25sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>